src/main.css
@import url('https://fonts.googleapis.com/css?family=Dosis:200,300,400,700');
@import url('https://fonts.googleapis.com/css?family=Roboto:200,300,400,700');
@import url('https://fonts.googleapis.com/css?family=Raleway:300,400,500,700');

@keyframes present-in {
	from {
		transform: translateX(-50px);
		opacity: 0;
	}

	to {
		transform: none;
		opacity: 1;
	}
}

@keyframes present-in-title {
	from {
		letter-spacing: .2em;
		opacity: 0;
	}

	to {
		letter-spacing: 0.27em;
		opacity: 1;
	}
}

::-webkit-scrollbar {
	width: 13px;
	height: 8px;
	background-color: #f5f5f500; /* or add it to the track */
}
::-webkit-scrollbar-thumb {
	background: #f3f3f3;
	border-left: 1px solid #060606;
}

body {
	margin: 0;
	background: #060606;
	color: #e2e2e2;
	font-size: 16px;
	display: flex;
	flex-direction: column;
	align-items: center;
	font-family: Roboto;
	font-weight: 300;
}

#navbar {
	position: relative;
	position: -webkit-sticky;
	position: sticky;
	top: 0;
	background: #ffffff;
	width: 100%;
	font-size: 4.1vw;
}

.navbar-inner {
	border-top-left-radius: 15px;
	border-top-right-radius: 15px;
	background: #060606;
	width: 100%;
	display: flex;
	justify-content: center;
	height: 50px;
	box-shadow: 0px 8px 16px 0px rgba(0,0,0,.1), 0px -8px 54px 0px rgba(0,0,0,0.3);
}

@media screen and (min-width: 600px) {
	.navbar-inner {
		border-top-left-radius: 0;
		border-top-right-radius: 0;
	}
}

.navbar-fixed .navbar-inner {
	border-top-left-radius: 0;
	border-top-right-radius: 0;
}

#navbar button {
	background: transparent;
	color: white;
	border: none;
	cursor: pointer;
	font-family: Raleway;
	font-weight: 200;
	text-transform: lowercase;
	font-size: inherit;
	padding: .5em;
}

@media screen and (min-width: 600px) {
	#navbar {
		font-size: 1.1em;
	}

	#navbar button {
		margin-right: 1em;
	}
}

#navbar button:focus {
	outline: none;
}

#navbar button:last-child {
	margin-right: 0;
}

.pane {
	background: #060606;
	padding: 2em;
	max-width: 1200px;
	width: calc(100% - 4em);
}

.pane-title {
	margin-top: 0;
	text-transform: lowercase;
	font-size: 1.9em;
	font-weight: 100;
	font-family: Raleway;
	letter-spacing: 2px;
	margin-bottom: 1em;
}

#pane-home {
	background: white;
	color: #060606;
	height: calc(1vh * 100 - 50px);
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	padding: 0;
	width: 100%;
	max-width: none;
	text-align: center;
}

#pane-about {
	height: 200px;
}

#pane-contact {
	min-height: calc(100vh - 2em);
}

.intro-prefix {
	margin-bottom: 1em;
	animation-name: present-in;
	animation-duration: 8s;
	animation-timing-function: cubic-bezier(0.21, 1.02, 0.36, 1.01);
	animation-fill-mode: both;
	font-family: Dosis;
	font-size: 5.3vw;
}

.intro-title {
	text-transform: uppercase;
	font-weight: 300;
	animation-name: present-in-title;
	animation-duration: 3s;
	animation-timing-function: ease-out;
	animation-delay: 2s;
	animation-fill-mode: both;
	font-family: Dosis;
	font-size: 11.4vw;
	margin-bottom: 2em;
}

@media screen and (min-width: 600px) {
	.intro-prefix {
		font-size: 1.5vw;
	}
	.intro-title {
		font-size: 7.4vw;
	}
}

.members {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	background: #303030;
	border-radius: 8px;
	box-shadow: inset 0 0 5px 1px rgba(0,0,0,0.34), inset 0 0 7px 2px rgba(0,0,0,0.12), inset 0 0 3px 0px rgba(0,0,0,0.3);
}

@keyframes card-present {
	from {
		opacity: 0;
		transform: translateY(10px);
	}
	to {
		opacity: 1;
		transform: none;
	}
}

.member-card {
	display: flex;
	margin: 1em;
    width: calc(100% - 2em);
    border-radius: 8px;
	overflow: hidden;
	flex-shrink: 0;
	flex-direction: column;
	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2), 0 0 21px -2px rgba(0,0,0,0.3);
	animation: card-present;
	animation-duration: 1.5s;
	animation-timing-function: ease-out;
	animation-fill-mode: backwards;
	transition: all .5s cubic-bezier(0.03, 0.41, 0.18, 0.97);
}

@media screen and (min-width: 420px) {
	.member-card {
		width: 320px;
	}
}

.member-card:nth-child(2) {
	animation-delay: .2s;
}

.member-card:nth-child(3) {
	animation-delay: .4s;
}

.member-card:hover {
	transform: translateY(-5px);
	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2), 0 0 21px -2px rgba(0,0,0,0.3);
}

.member-headshot {
	height: 240px;
	background: white;
	background-repeat: no-repeat;
	transition: all .5s cubic-bezier(0.03, 0.41, 0.18, 0.97);
	background-color: rgba(0,0,0,0); /* Fix for Chrome bug where the background image doesn't get properly cropped by the rounded border */
}

.masha .member-headshot {
	background-image: url(images/masha.jpg);
	background-position: left top -2px;
}

.gus .member-headshot {
	background-image: url(images/gus.jpg);
	background-position: center top -130px;
	background-size: 340px;
}

.isabel .member-headshot {
	background-image: url(images/isabel.jpg);
	background-position: left top -21px;
	background-size: 390px;
}

.member-bio {
	padding: .9em;
	background: #424242;
	color: #e2e2e2;
}

.member-name {
	font-size: 1.4em;
}

.member-desc {
	margin-top: 1em;
    font-size: 0.9em;
    font-style: italic;
}

.member-secondary-list {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	margin-top: 2em;
	margin-bottom: 1em;
	width: 100%;
	max-width: 900px;
}

.member-secondary {
	margin-bottom: 0.6em;
	padding: 0.8em 1.4em;
	text-align: center;
	font-size: .9em;
}

@media screen and (min-width: 420px) {
	.member-secondary {
		min-width: 280px;
		width: calc(50% - 2.8em);
	}
}

.member-secondary-name {
	font-weight: bold;
}

.video-container {
	text-align: center;
}

.floating-section-header {
	z-index: 1;
	position: fixed;
	top: 0;
	left: 0;
	color: white;
	display: none;
}

@media screen and (min-width: 600px) {
	.floating-section-header {
		display: block;
	}
}

.navbar-underline {
	background: #9e9e9e;
	position: absolute;
	height: 1px;
	bottom: 9px;
	transition: all .2s ease-out;
}

.social-buttons {
	position: absolute;
	right: 0;
	top: 0;
	height: 100%;
	align-items: center;
	padding-right: 1em;
	display: none;
}

@media screen and (min-width: 600px) {
	.social-buttons {
		display: flex;
	}
}

.social-link {
	margin-right: .6em;
	transition: opacity .5s ease-out;
}

.social-link:last-child {
	margin-right: 0;
}

.social-link > img {
	height: 26px;
	filter: brightness(50%);
	transition: all .2s cubic-bezier(0.21, 1.02, 0.36, 1.01);
	border-radius: 2px;
	padding: 3px 0;
}

.social-link > img:hover {
	filter: brightness(80%);
}

.social-link.indiegogo {
	opacity: 0;
	pointer-events: none;
}

.navbar-fixed .social-link.indiegogo {
	opacity: 1;
	pointer-events: unset;
}

.social-link.indiegogo > img {
	background: #ff4099;
	height: 20px;
	padding: 3px 4px;
}

.trailer-video {
	height: 158px;
	width: 280px;
}

@media screen and (min-width: 600px) {
	.trailer-video {
		height: 315px;
		width: 560px;
	}
}

.material-button {
	font-weight: bold;
	font-family: "Roboto";
	cursor: pointer;
	outline: none;
	transition: all .3s ease-out;
	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
	text-transform: uppercase;
	border: none;
	border-radius: 14px;
}

.material-button:hover {
	box-shadow: 0 3px 3px 0 rgba(0,0,0,0.14), 0 1px 7px 0 rgba(0,0,0,0.12), 0 3px 1px -1px rgba(0,0,0,0.2);
}

@keyframes dim-to-full {
	from {
		opacity: .2;
	}
	to {
		opacity: 1;
	}
}

.crowdfund-button {
	background: #fa1681;
	color: white;
	font-size: 12px;
	padding: 0.7em 3.2em;
	position: absolute;
	animation: 1s ease-in 3s 1 normal both running dim-to-full;
	margin: auto;
	bottom: 124px;
}

@media screen and (orientation: landscape) {
	.crowdfund-button {
		bottom: 22vh;
		right: 12vw;
		font-size: 10px;
	}
}

@media screen and (min-width: 600px) {
	.crowdfund-button {
		font-size: 17px;
		padding: 0.7em 3.2em;
		bottom: 12vh;
		right: 12vw;
	}
}

.link-button {
	text-decoration: none;
}

.crowdfund-button:hover {
	background: #ff4099;
}

.crowdfund-button > div:last-child,
.moreinfo-button > div:last-child {
	font-size: 2em;
}

@keyframes rise {
	from {
		transform: translateY(6px);
	}

	to {
		transform: translateY(-6px);
	}
}

.moreinfo-button {
	background: #060606;
	color: white;
	font-size: 10px;
	padding: 0.7em 3.2em;
	position: absolute;
	bottom: 60px;
	animation: 1s ease-in 3s 1 normal both running dim-to-full,
	           1s ease-in-out 3.5s infinite alternate both running rise;
	background-image: url(images/arrow-down.svg);
	background-size: 26px;
	background-repeat: no-repeat;
	background-position: bottom 6px center;
}

.moreinfo-button:hover {
	background-color: #292929;
}

@media screen and (orientation: landscape) {
	.moreinfo-button {
		bottom: 22vh;
		left: 12vw;
	}
}

@media screen and (min-width: 600px) {
	.moreinfo-button {
		font-size: 17px;
		padding: 0.7em 3.2em;
		bottom: 12vh;
		left: 12vw;
		background-size: 46px;
	}
}

